--- a/portfolio _contact/index.html
+++ b/portfolio _contact/index.html
@@ -13,18 +13,27 @@
 
 <body>
     <div class="container">
+        <div class="background-overlay"></div>
         <header id="header">
             <div class="header_wrap">
                 <h1 class="header_logo">Aki Design</h1>
                 <nav class="header_pc_nav">
                     <ul class="header_pc_ul">
-
                         <li><a href="../index.html#home">ホーム</a></li>
                         <li><a href="../index.html#concept">コンセプト</a></li>
                         <li><a href="../index.html#contents">コンテンツ</a></li>
                         <li><a href="../index.html#about">私について</a></li>
-                        <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
-
+                        <li class="hnavi_list">
+                            <a href="../index.html#works">つくったもの</a>
+                            <ul class="dropdown_lists">
+                                <li class="web_design">
+                                    <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                </li>
+                                <li class="glass_art">
+                                    <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                </li>
+                            </ul>
+                        </li>
 
                         <li><a href="../index.html#contact">お問い合わせ</a></li>
                     </ul>
@@ -35,13 +44,21 @@
                 <nav class="header_sp_nav">
                     <div class="home_sp_circle"><img src="img/blue_circle.svg" alt="青い丸">
                         <ul class="header_sp_ul">
-
                             <li><a href="../index.html#home">ホーム</a></li>
                             <li><a href="../index.html#concept">コンセプト</a></li>
                             <li><a href="../index.html#contents">コンテンツ</a></li>
                             <li><a href="../index.html#about">私について</a></li>
-                            <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
-
+                            <li class="hnavi_list">
+                                <a href="../index.html#works">つくったもの</a>
+                                <ul class="dropdown_lists">
+                                    <li class="web_design_child">
+                                        <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                    </li>
+                                    <li class="glass_art_child">
+                                        <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                    </li>
+                                </ul>
+                            </li>
 
                             <li><a href="../index.html#contact">お問い合わせ</a></li>
                         </ul>
@@ -91,8 +108,17 @@
                         <li><a href="../index.html#concept">コンセプト</a></li>
                         <li><a href="../index.html#contents">コンテンツ</a></li>
                         <li><a href="../index.html#about">私について</a></li>
-                        <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
-
+                        <li class="hnavi_list">
+                            <a href="../index.html#works">つくったもの</a>
+                            <ul class="dropdown_lists">
+                                <li class="web_design">
+                                    <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                </li>
+                                <li class="glass_art">
+                                    <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                </li>
+                            </ul>
+                        </li>
 
                         <li><a href="../index.html#contact">お問い合わせ</a></li>
                     </ul>
