--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <div class="container">
+        <div class="background-overlay"></div>
         <header id="header">
             <div class="header_wrap">
                 <h1 class="header_logo">Aki Design</h1>
@@ -48,8 +49,17 @@
                             <li><a href="../index.html#concept">コンセプト</a></li>
                             <li><a href="../index.html#contents">コンテンツ</a></li>
                             <li><a href="../index.html#about">私について</a></li>
-                            <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
-
+                            <li class="hnavi_list">
+                                <a href="../index.html#works">つくったもの</a>
+                                <ul class="dropdown_lists">
+                                    <li class="web_design_child">
+                                        <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                    </li>
+                                    <li class="glass_art_child">
+                                        <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                    </li>
+                                </ul>
+                            </li>
 
                             <li><a href="../index.html#contact">お問い合わせ</a></li>
                         </ul>
