--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <h1 class="header_logo">Aki Design</h1>
                 <nav class="header_pc_nav">
                     <ul class="header_pc_ul">
-                        <li><a href="../index.html#home">ホーム</a></li>
-                        <li><a href="../index.html#concept">コンセプト</a></li>
-                        <li><a href="../index.html#contents">コンテンツ</a></li>
-                        <li><a href="../index.html#about">私について</a></li>
+                        <li><a href="#home">ホーム</a></li>
+                        <li><a href="#concept">コンセプト</a></li>
+                        <li><a href="#contents">コンテンツ</a></li>
+                        <li><a href="#about">私について</a></li>
                         <li class="hnavi_list">
-                            <a href="../index.html#works">つくったもの</a>
+                            <a href="#works">つくったもの</a>
                             <ul class="dropdown_lists">
                                 <li class="web_design_child">
                                     <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../index.html#contact">お問い合わせ</a></li>
+                        <li><a href="#contact">お問い合わせ</a></li>
                     </ul>
                 </nav>
                 <div class="sp_btn">
@@ -54,12 +54,12 @@
                 <nav class="header_sp_nav">
                     <div class="home_sp_circle"><img src="images/img/blue_circle.svg" alt="青い丸">
                         <ul class="header_sp_ul">
-                            <li><a href="../index.html#home">ホーム</a></li>
-                            <li><a href="../index.html#concept">コンセプト</a></li>
-                            <li><a href="../index.html#contents">コンテンツ</a></li>
-                            <li><a href="../index.html#about">私について</a></li>
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">コンセプト</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
                             <li class="hnavi_list">
-                                <a href="../index.html#works">つくったもの</a>
+                                <a href="#works">つくったもの</a>
                                 <ul class="dropdown_lists">
                                     <li class="web_design_child">
                                         <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="../index.html#contact">お問い合わせ</a></li>
+                            <li><a href="#contact">お問い合わせ</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -381,7 +381,7 @@
         });
 
         //紙芝居風
-        $('.main-content-wrapper').stickyStack();
+        // $('.main-content-wrapper').stickyStack();
 
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
