--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -75,7 +75,7 @@
             <div class="container_item">
 
                 <div class="item">
-                    <img src="imgs/burger_rich.jpg" alt="高級感のあるハンバーガーバナー">
+                    <img class="item_img" src="imgs/burger_rich.jpg" alt="高級感のあるハンバーガーバナー">
                     <div class="line_left">
                         <h4>激旨バーガー/高級感デザイン(模擬)</h4>
                     </div>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="imgs/burger_pop.jpg" alt="POPなハンバーガーバナー">
+                    <img class="item_img" src="imgs/burger_pop.jpg" alt="POPなハンバーガーバナー">
                     <div class="line_left">
                         <h4>激旨バーガー/POPデザイン(模擬)</h4>
                     </div>
@@ -101,7 +101,7 @@
 
                 </div>
                 <div class="item">
-                    <img src="imgs/salon_hp.jpg" alt="美容室HP">
+                    <img class="item_img" src="imgs/salon_hp.jpg" alt="美容室HP">
                     <div class="line_left">
                         <h4>美容室のコーポレートサイト(模擬)</h4>
                     </div>
@@ -114,7 +114,7 @@
 
                 </div>
                 <div class="item">
-                    <img src="imgs/LP-80.jpg" alt="LP制作">
+                    <img class="item_img" src="imgs/LP-80.jpg" alt="LP制作">
                     <div class="line_left">
                         <h4>コワーキングスペースLP</h4>
                     </div>
@@ -140,7 +140,7 @@
 
                 </div>
                 <div class="item">
-                    <img src="imgs/designcafe.jpg" alt="デザインカフェサイト">
+                    <img class="item_img" src="imgs/designcafe.jpg" alt="デザインカフェサイト">
                     <div class="line_left">
                         <h4>デザインカフェサイト</h4>
                     </div>
