--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                             <a href="#works">つくったもの</a>
                             <ul class="dropdown_lists">
                                 <li class="web_design_child">
-                                    <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                    <a class="works_child_1" href="../portfolio/portfolio_webdesign/index.html">Web
+                                        Design</a>
                                 </li>
                                 <li class="glass_art_child">
-                                    <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                    <a class="works_child_2" href="../portfolio/portfolio_glassart/index.html">Glass
+                                        Art</a>
                                 </li>
                             </ul>
                         </li>
@@ -62,10 +64,12 @@
                                 <a href="#works">つくったもの</a>
                                 <ul class="dropdown_lists">
                                     <li class="web_design_child">
-                                        <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
+                                        <a class="works_child_1" href="../portfolio/portfolio_webdesign/index.html">Web
+                                            Design</a>
                                     </li>
                                     <li class="glass_art_child">
-                                        <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
+                                        <a class="works_child_2"
+                                            href="../portfolio/portfolio_webdesign/index.html">Glass Art</a>
                                     </li>
                                 </ul>
                             </li>
@@ -80,9 +84,9 @@
         <main>
             <!----<div class="home_background_overlay"></div>-->
             <div class="main-content-wrapper">
-                <section class="home" id="home">
+                <section class="home stack-content" id="home">
                     <ul class="home_parts">
-                        <li>
+                        <li class="home_text">
                             <h2>かさなるチカラ</h2>
                         </li>
                         <li class="home_slider_item">
@@ -211,39 +215,47 @@
                     <h2>つくったもの</h2>
                 </div>
                 <div class="slidein_left">
-                    <div class="container_pc_1">
-                        <div class="web_design">
-                            <img class="web_design_image" id="works_Web_design" src="images/img/works_web.jpg"
-                                alt="ウェブデザイン">
-                            <p class="more_1">more</p>
+
+                    <a href="../portfolio/portfolio_webdesign/index.html" class="link-wrapper">
+                        <div class="container_pc_1">
+                            <div class="web_design">
+                                <img class="web_design_image" id="works_Web_design" src="images/img/works_web.jpg"
+                                    alt="ウェブデザイン">
+                                <p class="more_1">more</p>
+                            </div>
+                            <h3 class="web">Web Design</h3>
                         </div>
-                        <h3 class="web">Web Design</h3>
-                    </div>
+                    </a>
                 </div>
                 <div class="slidein_right">
-                    <div class="container_pc_2">
-                        <div class="glass_art">
-                            <img class="glass_art_image" id="works_Glass_Art" src="images/img/works_Glassart@2x-80.jpg"
-                                alt="グラスアート">
-                            <p class="more_2">more</p>
+                    <a href="../portfolio/portfolio_glassart/index.html" class="link-wrapper">
+                        <div class="container_pc_2">
+                            <div class="glass_art">
+                                <img class="glass_art_image" id="works_Glass_Art"
+                                    src="images/img/works_Glassart@2x-80.jpg" alt="グラスアート">
+                                <p class="more_2">more</p>
+                            </div>
+                            <h3 class="glass">Glass Art</h3>
                         </div>
-                        <h3 class="glass">Glass Art</h3>
-                    </div>
+                    </a>
                 </div>
                 <div class="container_sp_1">
-                    <div class="web_design">
-                        <h3 class="web">Web Design</h3>
-                        <img class="web_design_image" id="" src="images/img/works_web.jpg" alt="ウェブデザイン">
-                        <p class="more_1">more</p>
-                    </div>
-
+                    <a href="../portfolio/portfolio_webdesign/index.html" class="link-wrapper">
+                        <div class="web_design">
+                            <h3 class="web">Web Design</h3>
+                            <img class="web_design_image" src="images/img/works_web.jpg" alt="ウェブデザイン">
+                            <p class="more_1">more</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="container_sp_2">
-                    <div class="glass_art">
-                        <h3 class="glass">Glass Art</h3>
-                        <img class="glass_art_image" id="" src="images/img/works_Glassart@2x-80.jpg" alt="グラスアート">
-                        <p class="more_2">more</p>
-                    </div>
+                    <a href="../portfolio/portfolio_glassart/index.html" class="link-wrapper">
+                        <div class="glass_art">
+                            <h3 class="glass">Glass Art</h3>
+                            <img class="glass_art_image" src="images/img/works_Glassart@2x-80.jpg" alt="グラスアート">
+                            <p class="more_2">more</p>
+                        </div>
+                    </a>
                 </div>
             </section>
 
@@ -253,8 +265,11 @@
                         <div class="contact_parts">
                             <h2>お問い合わせ</h2>
                             <ul>
-                                <li class="contact_btn"><a href="#contactform"></a>お問い合わせはこちらから</li>
-                                <li class="mail_icon"><img src="images/img/mail_icon.svg" alt="メールアイコン"></li>
+                                <li class="contact_btn"><a
+                                        href="../portfolio/portfolio_contact/index.html">お問い合わせはこちらから</a>
+                                </li>
+                                <li class="mail_icon"><a href="../portfolio/portfolio_contact/index.html"><img
+                                            src="images/img/mail_icon.svg" alt="メールアイコン"></a></li>
                             </ul>
                         </div>
                         <div class="contact_drawing">
@@ -276,18 +291,31 @@
         <footer>
             <div class="footer_era">
                 <div class="footer">
-                    <a href="#header_a">
-                        <nav class="footer_nav">
-                            <ul class="footer_a">
-                                <li><a href="#home">ホーム</a></li>
-                                <li><a href="#concept">おもい</a></li>
-                                <li><a href="#contents">コンテンツ</a></li>
-                                <li><a href="#about">私について</a></li>
-                                <li><a href="#works">つくったもの</a></li>
-                                <li><a href="#contact">お問い合わせ</a></li>
-                            </ul>
-                        </nav>
-                    </a>
+                    <!--<a href="#footer_a">-->
+                    <nav class="footer_nav">
+                        <ul class="footer_a">
+                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#concept">コンセプト</a></li>
+                            <li><a href="#contents">コンテンツ</a></li>
+                            <li><a href="#about">私について</a></li>
+                            <li class="footer_hnavi_list">
+                                <a href="#works">つくったもの</a>
+                                <ul class="footer_dropdown_lists">
+                                    <li class="footer_web_design_child">
+                                        <a class="footer_works_child_1"
+                                            href="../portfolio/portfolio_webdesign/index.html">Web
+                                            Design</a>
+                                    </li>
+                                    <li class="footer_glass_art_child">
+                                        <a class="footer_works_child_2"
+                                            href="../portfolio/portfolio_webdesign/index.html">Glass
+                                            Art</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="#contact">お問い合わせ</a></li>
+                        </ul>
+                    </nav>
                     <ul class="sns_rnk">
                         <li class="instagram_icon">
                             <img src="images/img/Instagram_icon.svg" alt="Instagram">
@@ -307,14 +335,55 @@
 
     <script>
         $(function () {
-            $('.sp_btn').on('click', function () {
-                $('.sp_btn').toggleClass('open');
-                $('.header_sp_nav').fadeToggle();
+            //紙芝居風
+            $('.main-content-wrapper').stickyStack({
+                // stack_contentクラスを付けた最初のセクションのみ、紙芝居風の動きをさせる
+                stackingElement: '.stack-content',
             });
+            $(window).scroll(function () {
+                $concept = $('.concept_background').offset().top
+                $scroll = $(window).scrollTop() + 250
+                $content_img = $('.contents').offset().top
+
+                // 「かさなるチカラ」が「おもい」の黄色の背景と重なったら隠す
+                if ($scroll > $concept) {
+                    $('.home_text').css({
+                        opacity: '0'
+                    });
+                } else {
+                    $('.home_text').css({
+                        opacity: '1'
+                    });
+                }
+                // 手のイラストが「おもい」の黄色の背景を超えたら隠す
+                if ($scroll > $content_img) {
+                    $('.home_parts').css({
+                        opacity: '0'
+                    });
+                } else {
+                    $('.home_parts').css({
+                        opacity: '1'
+                    });
+                }
+            });
+
+            $('.sp_btn').on('click', function () {
+                $(this).toggleClass('open'); // スパンのオープン/クローズ切り替え
+                $('.header_sp_nav').fadeToggle(); // ナビゲーションの表示/非表示切り替え
+
+                // home_slider_item と home_text の表示/非表示切り替え
+                $('.home_slider_item').toggleClass('hidden');
+                $('.home_text').toggleClass('hidden');
+            });
+
+            // リンククリック時にナビゲーションを閉じる
             $('.header_sp_nav a').on('click', function () {
                 $('.header_sp_nav').fadeOut();
                 $('.sp_btn').removeClass('open');
             });
+
+
+
             $(document).ready(function () {
                 $('.about_slider').slick({
                     dots: false,
