--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
                 </section>
             </div>
             <section class="contents" id="contents">
-                <img src="images/img/コンテンツ仮-80.jpg" alt="">
+
+                <div class="fuwafuwa_1"></div>
+                <div class="fuwafuwa_2"></div>
+                <div class="fuwafuwa_3"></div>
+                <div class="fuwafuwa_4"></div>
 
 
             </section>
@@ -280,11 +284,13 @@
                 </div>
             </section>
             <!-- フッターの矢印 -->
-
             <div class="bottom scroll_circle">
-                <div class="scrolldown"><span>Top</span></div>
+                <a href="#header">
+                    <div class="scrolldown">
+                        <span>Top</span>
+                    </div>
+                </a>
             </div>
-
             <!------------------>
         </main>
 
@@ -294,7 +300,7 @@
                     <!--<a href="#footer_a">-->
                     <nav class="footer_nav">
                         <ul class="footer_a">
-                            <li><a href="#home">ホーム</a></li>
+                            <li><a href="#header">ホーム</a></li>
                             <li><a href="#concept">コンセプト</a></li>
                             <li><a href="#contents">コンテンツ</a></li>
                             <li><a href="#about">私について</a></li>
