--- a/portfolio_contact/index.html
+++ b/portfolio_contact/index.html
@@ -102,23 +102,15 @@
         <footer>
             <div class="footer_era">
                 <div class="footer">
+                    <!--<a href="#footer_a">-->
                     <nav class="footer_nav">
                         <ul class="footer_a">
                             <li><a href="../index.html#home">ホーム</a></li>
                             <li><a href="../index.html#concept">コンセプト</a></li>
                             <li><a href="../index.html#contents">コンテンツ</a></li>
                             <li><a href="../index.html#about">私について</a></li>
-                            <li class="hnavi_list">
-                                <a href="../index.html#works">つくったもの</a>
-                                <ul class="dropdown_lists">
-                                    <li class="web_design">
-                                        <a class="works_child_1" href="../portfolio_webdesign/index.html">Web Design</a>
-                                    </li>
-                                    <li class="glass_art">
-                                        <a class="works_child_2" href="../portfolio_glassart/index.html">Glass Art</a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <li class="hnavi_list"><a href="../index.html#works">つくったもの</a></li>
+
 
                             <li><a href="../index.html#contact">お問い合わせ</a></li>
                         </ul>
