--- a/index.html
+++ b/index.html
@@ -324,10 +324,14 @@
                     </nav>
                     <ul class="sns_rnk">
                         <li class="instagram_icon">
-                            <img src="images/img/Instagram_icon.svg" alt="Instagram">
+                            <a href="https://www.instagram.com/akitakemoto.glass/" target="_blank">
+                                <img src="images/img/Instagram_icon.svg" alt="Instagram">
+                            </a>
                         </li>
                         <li class="x_icon">
-                            <img src="images/img/X_icon.png" alt="X">
+                            <a href="https://x.com/5kxm4rq2sj" target="_blank">
+                                <img src="images/img/X_icon.png" alt="X">
+                            </a>
                         </li>
                     </ul>
                     <ul class="copyright">
