--- a/portfolio_glassart/index.html
+++ b/portfolio_glassart/index.html
@@ -109,7 +109,9 @@
             </div>
             <div>
                 <p class="more">もっとみる</p>
-                <img class="instagram_rnk" src="img/Instagram_icon.svg" alt="">
+                <a href="https://www.instagram.com/akitakemoto.glass/" target="_blank">
+                    <img class="instagram_rnk" src="img/Instagram_icon.svg" alt="">
+                </a>
             </div>
 
 
@@ -133,10 +135,14 @@
                     </nav>
                     <ul class="sns_rnk">
                         <li class="instagram_icon">
-                            <img src="img/Instagram_icon.svg" alt="Instagram">
+                            <a href="https://www.instagram.com/akitakemoto.glass/" target="_blank">
+                                <img src="img/Instagram_icon.svg" alt="Instagram">
+                            </a>
                         </li>
                         <li class="x_icon">
-                            <img src="img/X_icon.svg" alt="X">
+                            <a href="https://x.com/5kxm4rq2sj" target="_blank">
+                                <img src="img/X_icon.png" alt="X">
+                            </a>
                         </li>
                     </ul>
                     <ul class="copyright">
