--- a/portfolio_webdesign/index.html
+++ b/portfolio_webdesign/index.html
@@ -162,7 +162,7 @@
                 <div class="footer">
                     <nav class="footer_nav">
                         <ul class="footer_a">
-                            <li><a href="../index.html#home">ホーム</a></li>
+                            <li><a href="../index.html#header">ホーム</a></li>
                             <li><a href="../index.html#concept">コンセプト</a></li>
                             <li><a href="../index.html#contents">コンテンツ</a></li>
                             <li><a href="../index.html#about">私について</a></li>
@@ -174,10 +174,14 @@
                     </nav>
                     <ul class="sns_rnk">
                         <li class="instagram_icon">
-                            <img src="imgs/Instagram_icon.svg" alt="Instagram">
+                            <a href="https://www.instagram.com/akitakemoto.glass/" target="_blank">
+                                <img src="imgs/Instagram_icon.svg" alt="Instagram">
+                            </a>
                         </li>
                         <li class="x_icon">
-                            <img src="imgs/X_icon.png" alt="X">
+                            <a href="https://x.com/5kxm4rq2sj" target="_blank">
+                                <img src="imgs/X_icon.png" alt="X">
+                            </a>
                         </li>
                     </ul>
                     <ul class="copyright">
