--- a/portfplio_thankspage/index.html
+++ b/portfplio_thankspage/index.html
@@ -60,7 +60,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="../index.html#contact">お問い合わせ</a></li>
+                            <li><a href="../portfolio_contact/index.html">お問い合わせ</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -95,10 +95,14 @@
                     </nav>
                     <ul class="sns_rnk">
                         <li class="instagram_icon">
-                            <img src="images/Instagram_icon.svg" alt="Instagram">
+                            <a href="https://www.instagram.com/akitakemoto.glass/" target="_blank">
+                                <img src="images/Instagram_icon.svg" alt="Instagram">
+                            </a>
                         </li>
                         <li class="x_icon">
-                            <img src="images/X_icon.svg" alt="X">
+                            <a href="https://x.com/5kxm4rq2sj" target="_blank">
+                                <img src="images/X_icon.png" alt="X">
+                            </a>
                         </li>
                     </ul>
                     <ul class="copyright">
