--- a/portfolio_contact/index.html
+++ b/portfolio_contact/index.html
@@ -67,9 +67,10 @@
                 </nav>
             </div>
         </header>
+
         <main>
             <div class="container">
-                <h2 class="contact_title">お問い合わせ</h2>
+                <h2 class="contact_title"> お問い合わせ </h2>
                 <h3 class="contact_sbtitle">以下の項目に必要事項をお書きください。</h3>
 
                 <form class="c-form"
@@ -103,6 +104,7 @@
         <footer>
             <div class="footer_era">
                 <div class="footer">
+                    <!--<a href="#footer_a">-->
                     <!--<a href="#footer_a">-->
                     <nav class="footer_nav">
                         <ul class="footer_a">
